ya quedo la seccion 91 92 93

--- a/MAI/seccion9.tex
+++ b/MAI/seccion9.tex
@@ -1,21 +1,7 @@
-\documentclass[12pt,letterpaper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[spanish]{babel}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{graphicx}
-\usepackage{multicol}
-\usepackage{enumitem}
-\usepackage{ragged2e}
-\providecommand{\abs}[1]{\lvert#1\rvert}
 
-\usepackage[left=2cm,right=2cm,top=2cm,bottom=4cm]{geometry}
-\author{Javier Said Naranjo Miranda}
-\begin{document}
 \subsection* {Cap\'itulo 9 Funciones Complejas}
 	\subsubsection* {Secci\'on 9.1 Limites, continuidad, derivadas}
-	\subsection* {Problemas Secci\'on 9.1}
+	\subsubsection* {Problemas Secci\'on 9.1}
 \justify
 En cada problema del 1 al 16, encuentre $u$ y $v$ de manera que $f(z) = u(x,y) + iv(x,y)$, determine todos los puntos(si los hay)en donde las ecuaciones de Cauchy-Riemann se satisfacen, y determine todos los puntos en donde la funci\'on es diferenciable. Se pueden suponer todos los resultados familiares de la continuidad de funciones reales de dos variables.
 \begin{enumerate}
@@ -109,7 +95,7 @@ Las condiciones de Cauchy-Riemann no se satisfacen en ning\'un punto.\\
 Al no cumplirse las condiciones de C-R la funci\'on no es diferenciable en ning\'un punto.
 \end{enumerate}
 	\subsubsection* {Secci\'on 9.2 Series de potencias}
-	\subsection* {Problemas Secci\'on 9.2}
+	\subsubsection* {Problemas Secci\'on 9.2}
 \justify
 En cada uno de los problemas, determine el radio de convergencia y el disco abierto de convergencia de la serie de potencias.
 \begin{enumerate}
@@ -169,5 +155,3 @@ Soluci\'on\\
 Por el Criterio de la razon tenemos que  $\lim_{n \to \infty}\frac{C_{n+1}}{C_n} = 2$ si $n$ es par y que $\lim_{n \to \infty}\frac{C_{n+1}}{C_n}=\frac{1}{2}$ si $n$ es impar, por lo tanto el limite no existe.\\
 Sin embargo por el criterio de la ra\'iz tenemos que $\lim_{n \to \infty} \sqrt[n]{|C_n|}=|C_n|^0= 1$, de manera que el radio de convergencia es 1 por el criterio de la ra\'iz n-\'esima.
 \end{enumerate}
-
-\end{document}
