--- a/MAI/capitulo9.tex
+++ b/MAI/capitulo9.tex
@@ -14,8 +14,10 @@
 \author{Javier Said Naranjo Miranda}
 
 \begin{document}
+
+\include{introduccion}
 \include{seccion9}
-\include{seccion93}
-\include{seccion94}
+
+
 \end{document}
 
